--- a/djangoProject/home.html
+++ b/djangoProject/home.html
@@ -12,7 +12,7 @@
         <form method="GET" action="{% url 'download_twitter_video' %}">
             {% csrf_token %}
             <input type="text" name="twitter_link">
-            <input type="submit" value="Submit">
+            <input type="submit" value="Submits">
         </form>
     </main>
 
